aaaa/5.1.1_restrict-clusteradmin-rolebindings.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata: # kpt-merge: /restrict-clusteradmin-rolebindings
  name: restrict-clusteradmin-rolebindings
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts use of the cluster-admin role.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.1.1'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  parameters:
    restrictedRole:
      apiGroup: 'rbac.authorization.k8s.io'
      kind: 'ClusterRole'
      name: 'cluster-admin'
    allowedSubjects:
    - apiGroup: 'rbac.authorization.k8s.io'
      kind: 'Group'
      name: 'system:masters'
