aaaa/5.2.5_psp-allow-privilege-escalation-container.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata: # kpt-merge: /psp-allow-privilege-escalation-container
  name: psp-allow-privilege-escalation-container
  annotations:
    # This constraint is not certified by CIS.
    description: 'Restricts containers with `allowPrivilegeEscalation` set to `true`.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.2.5'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
  match:
    kinds:
    - apiGroups: ['']
      kinds: ['Pod']
