aaaa/5.7.3_pods-require-security-context.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata: # kpt-merge: /pods-require-security-context
  name: pods-require-security-context
  annotations:
    # This constraint is not certified by CIS.
    description: 'Requires that Pods must have a `securityContext` defined.'
    bundles.validator.forsetisecurity.org/cis-k8s-v1.5.1: '5.7.3'
spec:
  enforcementAction: dryrun # kpt-set: ${enforcementAction}
